--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,7 @@
 @import "./elements";
 @import "./reset";
 @import "./container";
+@import "./cards";
 @import "./fonts";
 @import "./frame";
 @import "./header";
