--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ a {
 }
 .title {
   gap: 10px;
-  padding-bottom: 60px;
+  margin-bottom: 3.75rem;
 }
 .title__sub {
   cursor: pointer;
@@ -31,6 +31,7 @@ a {
 .title__sub:hover {
   color: #F0145A;
   stroke: #F0145A;
+  transition: stroke, color 0.3s ease;
 }
 
 .plus {
@@ -40,7 +41,6 @@ a {
 }
 .plus__wrap {
   row-gap: 1.875rem;
-  padding-bottom: 60px;
 }
 .plus__img {
   padding: 0.875rem;
@@ -152,10 +152,10 @@ h4 {
 .frame-wrap {
   max-width: 1347px;
   margin: 0 auto;
+  margin-bottom: 3.75rem;
 }
 
 .frame {
-  padding: 60px 0 60px 0;
   justify-content: center;
   display: flex;
   align-items: center;
@@ -200,6 +200,9 @@ h4 {
   transition: color 0.3s ease;
   color: #F0145A;
 }
+.frame__wrap {
+  padding: 3.75rem 0 3.75rem 0;
+}
 
 .first-section__header {
   display: grid;
@@ -212,6 +215,13 @@ h4 {
     gap: 1.875rem;
     grid-template-columns: 1fr;
     grid-template-areas: "info" "logo" "nav";
+  }
+}
+@media screen and (max-width: 400px) {
+  .first-section__header {
+    gap: 0.9375rem;
+    grid-template-columns: 1fr;
+    grid-template-areas: "info info" "logo nav";
   }
 }
 
@@ -229,8 +239,25 @@ h4 {
 .header__nav {
   grid-area: nav;
 }
+@media screen and (max-width: 400px) {
+  .header__nav {
+    display: none;
+  }
+}
 .header__info {
   grid-area: info;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 400px) {
+  .header__info {
+    width: 100%;
+    justify-content: space-between;
+    gap: 0.625rem;
+    flex-wrap: wrap;
+    padding: 0.625rem 0;
+    background: rgba(245, 245, 250, 0.2);
+  }
 }
 .header__link {
   color: #FFFFFF;
@@ -267,6 +294,17 @@ h4 {
   background-color: #FFFFFF;
   border-radius: 50%;
   margin: 10px;
+}
+@media screen and (max-width: 400px) {
+  .circle {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .nav__off {
+    display: none;
+  }
 }
 
 :root {
@@ -324,4 +362,9 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media screen and (max-width: 400px) {
+  .first-section {
+    padding: 0 0 30px 0;
+  }
 }
