--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,6 +66,9 @@
    display: flex;
    flex-direction: column;
    justify-content: space-between;
+   @media screen and (max-width: 400px) {
+      padding: 0 0 30px 0;  
+   }
    // &__header {
    // }
    // &__title { 
