--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,12 @@ h4 {
   }
 }
 
+@media screen and (max-width: 400px) {
+  .logo {
+    width: 70px;
+  }
+}
+
 .header__logo {
   grid-area: logo;
 }
