--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ h4 {
     grid-template-areas: "info" "logo" "nav";
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .first-section__header {
     gap: 0.9375rem;
     grid-template-columns: 1fr;
@@ -225,7 +225,7 @@ h4 {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .logo {
     width: 70px;
   }
@@ -245,7 +245,7 @@ h4 {
 .header__nav {
   grid-area: nav;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .header__nav {
     display: none;
   }
@@ -255,14 +255,12 @@ h4 {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .header__info {
     width: 100%;
     justify-content: space-between;
     gap: 0.625rem;
-    flex-wrap: wrap;
     padding: 0.625rem 0;
-    background: rgba(245, 245, 250, 0.2);
   }
 }
 .header__link {
@@ -271,6 +269,20 @@ h4 {
 }
 .header__link:hover {
   color: #F0145A;
+}
+
+.info-bg {
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  .info-bg {
+    display: block;
+    position: absolute;
+    background: rgba(245, 245, 250, 0.2);
+    width: 100%;
+    height: 50px;
+    z-index: 90;
+  }
 }
 
 .btn-lang {
@@ -301,13 +313,13 @@ h4 {
   border-radius: 50%;
   margin: 10px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .circle {
     display: none;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .nav__off {
     display: none;
   }
@@ -369,7 +381,7 @@ h4 {
   flex-direction: column;
   justify-content: space-between;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .first-section {
     padding: 0 0 30px 0;
   }
