--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -13,7 +13,7 @@
       "logo"
       "nav";
    }
-   @media screen and (max-width: 400px) {
+   @media screen and (max-width: 500px) {
       gap: toRem(15);
       grid-template-columns: 1fr;
       grid-template-areas: 
@@ -23,7 +23,7 @@
 }
 
 .logo {
-   @media screen and (max-width: 400px) {
+   @media screen and (max-width: 500px) {
       width: 70px;
    }
 }
@@ -41,7 +41,7 @@
    }
    &__nav {
       grid-area: nav;
-      @media screen and (max-width: 400px) {
+      @media screen and (max-width: 500px) {
          display: none;
       }
    }
@@ -49,13 +49,11 @@
       grid-area: info;
       display: flex;
       align-items: center;
-      @media screen and (max-width: 400px) {
+      @media screen and (max-width: 500px) {
          width: 100%;
          justify-content: space-between;
          gap: toRem(10);
-         flex-wrap: wrap;
          padding: toRem(10) 0;
-         background: rgba(245, 245, 250, 0.20);
       }
    }
    &__link {
@@ -66,6 +64,19 @@
       }
    }
 }
+
+.info-bg {
+   display: none;
+   @media screen and (max-width: 500px) {
+      display: block;
+      position: absolute;
+      background: rgba(245, 245, 250, 0.20);
+      width: 100%;
+      height: 50px;
+      z-index: 90;
+   }
+}
+
 
 // toggle-lang
 .btn-lang {
@@ -93,14 +104,14 @@
    background-color: $basic-white;
    border-radius: 50%;
    margin: 10px;
-   @media screen and (max-width: 400px) {
+   @media screen and (max-width: 500px) {
       display: none;
    }
 }
 
 .nav {
    &__off {
-      @media screen and (max-width: 400px) {
+      @media screen and (max-width: 500px) {
          display: none;
       }
    }
