--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 @import "./cards";
 @import "./fonts";
 @import "./frame";
+@import "./carousel";
 @import "./header";
 
 :root {
@@ -75,4 +76,8 @@
    // }
    // &__btn {
    // }
+}
+
+.second-section {
+   padding: toRem(60) 0 toRem(60);
 }
