--- a/styles/_carousel.scss
+++ b/styles/_carousel.scss
@@ -10,28 +10,43 @@
 }
 
 .carousel {
+   &__bottom,
    &__top {
-
-   }
-   &__bottom {
-
+      display: flex;
+      flex-direction: column;
+      gap: toRem(6);
    }
    &__title {
       padding: toRem(30);
-      
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 30px;
+      flex-grow: 1;
    }
    &-wrap {
       background-color: $grey-bg;
       display: flex;
-      border-radius: 12px;
+      border-radius: toRem(12);
+      @media screen and (max-width: 1000px) {
+         flex-direction: column;
+      }
    }
    &__img {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 12px 0 0 12px;
+      border-radius: toRem(12) 0 0 toRem(12);
+      @media screen and (max-width: 1000px) {
+         border-radius: toRem(12) toRem(12) 0 0;
+      }
       &-wrap {
-         
+         min-height: 344px;
+         flex: 0 0 400px;
+         position: relative;
       }
    }
 }
