--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -60,6 +60,16 @@ h4 {
 
 // font-colors
 .clr {
+   // main 
+   &__m-regular {
+      color: $main-regular;
+   }
+   &__m-alt {
+      color: $main-alt;
+   }
+   &__m-soft {
+      color: $main-soft;
+   }
    // grey
    &__bg {
       color: $grey-bg;
@@ -95,6 +105,21 @@ h4 {
       color: $accent;
    }
    // gradients
-   // &__red-rev {
-   // }
+   &__grd {
+      &--redrev {
+         background-image: linear-gradient(90deg, #F0145A 0.84%, #EF8080 99.96%);
+         -webkit-background-clip: text;
+         -webkit-text-fill-color: transparent;
+      }
+      &--red {
+         background-image: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+         -webkit-background-clip: text;
+         -webkit-text-fill-color: transparent;
+      }
+      &--supersoft {
+         background-image: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643e72 87.46%);
+         -webkit-background-clip: text;
+         -webkit-text-fill-color: transparent;
+      }
+   }
 }
