--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -23,7 +23,7 @@
 }
 
 .logo {
-   @media screen and (max-width: 500px) {
+   @media (max-width: 500px) {
       width: 70px;
    }
 }
@@ -35,50 +35,119 @@
    &__nav,
    &__info {
       justify-self: end;
-      @media screen and (max-width: 768px) {
+      @media (max-width: 768px) {
          justify-self: start;
       }
    }
    &__nav {
       grid-area: nav;
-      @media screen and (max-width: 500px) {
-         display: none;
-      }
    }
    &__info {
       grid-area: info;
       display: flex;
       align-items: center;
-      @media screen and (max-width: 500px) {
-         width: 100%;
+      @media (max-width: 500px) {
+         width: calc(100% + 24px);
          justify-content: space-between;
+         background-color: rgba(245, 245, 250, 0.20);
+         position: relative;
          gap: toRem(10);
-         padding: toRem(10) 0;
+         padding: toRem(10) toRem(12);
+         left: -12px;
       }
+   }
+   &__burger-btn {
+      position: relative;
+      display: none;
+      width: 32px;
+      height: 32px;
+      background-color: transparent;
+      border: none;
+      & span {
+         display: block;
+         position: absolute;
+         width: 20px;
+         height: 3px;
+         left: 6px;
+         background-color: $basic-white;
+         transition: opacity .2s, transform .3s ease;
+         will-change: transform;
+         &:nth-child(1) {
+            transform: translateY(-8px);
+         }
+         &:nth-child(3) {
+            transform: translateY(8px);
+         }
+      }
+   }
+}
+
+.menu {
+   &__list {
+      display: flex;
+      gap: toRem(15);
    }
    &__link {
       color: $basic-white;
-      transition: color .3s ease;
       &:hover {
          color: $accent;
+         transition: color .3s ease;
       }
    }
 }
 
-.info-bg {
-   display: none;
-   @media screen and (max-width: 500px) {
-      display: block;
-      position: absolute;
-      background: rgba(245, 245, 250, 0.20);
-      width: 100%;
-      height: 50px;
-      z-index: 90;
+.header__nav.open {
+   & .header__burger-btn {
+      & span {
+         &:nth-child(1) {
+            transform: translateY(0) rotate(45deg);
+         }
+         &:nth-child(2) {
+            transform: translateY(0) rotate(45deg);
+            opacity: 0;
+         }
+         &:nth-child(3) {
+            transform: translateY(0) rotate(-45deg);
+         }
+      }
    }
 }
 
+@media (max-width: 500px) {
+   .header {
+      &__burger-btn {
+         display: block;
+         position: relative;
+         z-index: 2;
+      }
+   }
+   .menu {
+      z-index: 1;
+      position: absolute;
+      right: -270px;
+      top: 50px;
+      width: 256px;
+      padding: 52px 20px 40px 20px;
+      background-color: $main-alt;
+      visibility: hidden;
+      &__list {
+         display: block;
+      }
+      &__link {
+         display: block;
+         padding: 10px;
+      }
+   }
+   .header__nav.open {
+      & .menu {
+         transform: translateX(-100%);
+         transition: transform .3s ease;
+         visibility: visible;
+      }
+   }
+}
 
-// toggle-lang
+// !_toggle-lang
 .btn-lang {
    padding: toRem(5) toRem(7);
    border-radius: toRem(8);
@@ -108,6 +177,9 @@
       display: none;
    }
 }
+.bgc-grey {
+   background-color: $grey-text;
+}
 
 .nav {
    &__off {
@@ -116,3 +188,4 @@
       }
    }
 }
+
