--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,7 @@ h4 {
     right: -270px;
     top: 50px;
     width: 256px;
-    padding: 52px 20px 40px 20px;
+    padding: 52px 20px 20px 20px;
     background-color: #46466E;
     visibility: hidden;
   }
@@ -630,6 +630,13 @@ h4 {
   .nav__off {
     display: none;
   }
+}
+
+.btn-id:hover {
+  transform: scale(1.25);
+  background-color: #F0145A;
+  border-radius: 50%;
+  transition: transform 0.2s ease;
 }
 
 :root {
