--- a/css/main.css
+++ b/css/main.css
@@ -344,6 +344,39 @@ h4 {
   background: #000;
 }
 
+.main-info__title {
+  margin-bottom: 1.75rem;
+}
+.main-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-left: 1.875rem;
+  border-left: 0.25rem solid #E6E6F0;
+}
+.main__img-team {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.achievements {
+  background-color: #F5F5FA;
+  padding: 1.875rem 0;
+}
+
+.ach__img {
+  max-width: 100%;
+  padding: 1.5625rem;
+}
+.ach__img-wrap {
+  border-radius: 0.75rem;
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .frame-wrap {
   max-width: 1347px;
   margin: 0 auto;
@@ -483,6 +516,8 @@ h4 {
 
 .header__logo {
   grid-area: logo;
+  display: flex;
+  gap: 10px;
 }
 .header__nav, .header__info {
   justify-self: end;
@@ -505,6 +540,17 @@ h4 {
     width: calc(100% + 24px);
     justify-content: space-between;
     background-color: rgba(245, 245, 250, 0.2);
+    position: relative;
+    gap: 0.625rem;
+    padding: 0.625rem 0.75rem;
+    left: -12px;
+  }
+}
+@media (max-width: 500px) {
+  .header__info_light {
+    width: calc(100% + 24px);
+    justify-content: space-between;
+    background-color: #F5F5FA;
     position: relative;
     gap: 0.625rem;
     padding: 0.625rem 0.75rem;
@@ -535,17 +581,48 @@ h4 {
 .header__burger-btn span:nth-child(3) {
   transform: translateY(8px);
 }
+.header__burger-btn_light span {
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 3px;
+  left: 6px;
+  background-color: #323264;
+  transition: opacity 0.2s, transform 0.3s ease;
+  will-change: transform;
+}
+.header__burger-btn_light span:nth-child(1) {
+  transform: translateY(-8px);
+}
+.header__burger-btn_light span:nth-child(3) {
+  transform: translateY(8px);
+}
 
 .menu__list {
   display: flex;
   gap: 0.9375rem;
 }
 .menu__link {
+  padding-bottom: 3px;
   color: #FFFFFF;
+  border-bottom: 2px solid transparent;
 }
 .menu__link:hover {
   color: #F0145A;
   transition: color 0.3s ease;
+}
+.menu__link_a {
+  padding-bottom: 3px;
+  border-bottom: 2px solid transparent;
+  color: #24A3FF;
+}
+.menu__link_a:hover {
+  color: #F0145A;
+  transition: color 0.3s ease;
+}
+.menu__link_a_active {
+  color: #F0145A;
+  border-bottom: 2px solid #F0145A;
 }
 
 .header__nav.open .header__burger-btn span:nth-child(1) {
@@ -578,9 +655,12 @@ h4 {
   .menu__list {
     display: block;
   }
-  .menu__link {
+  .menu__link, .menu__link_a {
     display: block;
     padding: 10px;
+  }
+  .menu_light {
+    background-color: #EDEDF7;
   }
   .header__nav.open .menu {
     transform: translateX(-100%);
@@ -591,10 +671,10 @@ h4 {
 .btn-lang {
   padding: 0.3125rem 0.4375rem;
   border-radius: 0.5rem;
-  color: #FFFFFF;
+  color: #B3B3BA;
 }
 .btn-lang:checked {
-  color: #FFFFFF;
+  color: #B3B3BA;
 }
 
 .btn-check:checked + .btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check) + .btn:active {
@@ -639,6 +719,32 @@ h4 {
   transition: transform 0.2s ease;
 }
 
+.slash {
+  display: flex;
+  gap: 4px;
+  align-items: start;
+}
+.slash__img {
+  width: 1.3125rem;
+  height: 2.9375rem;
+}
+.slash__txt {
+  color: #323264;
+  font-family: Montserrat;
+  font-size: 2.375rem;
+}
+
+@media (max-width: 500px) {
+  .slash__img {
+    width: 0.75rem;
+    height: 1.625rem;
+  }
+  .slash__txt {
+    color: #323264;
+    font-family: Montserrat;
+    font-size: 1.25rem;
+  }
+}
 :root {
   --bs-font-sans-serif: "Montserrat", "Serif";
 }
@@ -721,4 +827,20 @@ h4 {
 .thrid-section {
   padding: 1.875rem 0 1.875rem 0;
   background-color: #F5F5FA;
+}
+
+.section__about-us {
+  padding: 3.125rem 0;
+}
+@media (max-width: 500px) {
+  .section__about-us {
+    padding: 0 0 3.125rem 0;
+  }
+}
+
+.section__main {
+  padding: 3.75rem 0 0 0;
+  display: flex;
+  flex-direction: column;
+  gap: 3.75rem;
 }
