--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -31,6 +31,8 @@
 .header {
    &__logo {
       grid-area: logo;
+      display: flex;
+      gap: 10px;
    }
    &__nav,
    &__info {
@@ -54,6 +56,17 @@
          gap: toRem(10);
          padding: toRem(10) toRem(12);
          left: -12px;
+      }
+      &_light {
+         @media (max-width: 500px) {
+            width: calc(100% + 24px);
+            justify-content: space-between;
+            background-color: $grey-bg;
+            position: relative;
+            gap: toRem(10);
+            padding: toRem(10) toRem(12);
+            left: -12px;
+         }
       }
    }
    &__burger-btn {
@@ -79,6 +92,24 @@
             transform: translateY(8px);
          }
       }
+      &_light {
+         & span {
+            display: block;
+            position: absolute;
+            width: 20px;
+            height: 3px;
+            left: 6px;
+            background-color: $main-regular;
+            transition: opacity .2s, transform .3s ease;
+            will-change: transform;
+            &:nth-child(1) {
+               transform: translateY(-8px);
+            }
+            &:nth-child(3) {
+               transform: translateY(8px);
+            }
+         } 
+      }
    }
 }
 
@@ -88,10 +119,25 @@
       gap: toRem(15);
    }
    &__link {
+      padding-bottom: 3px;
       color: $basic-white;
+      border-bottom: 2px solid transparent;
       &:hover {
          color: $accent;
          transition: color .3s ease;
+      }
+   }
+   &__link_a {
+      padding-bottom: 3px;
+      border-bottom: 2px solid transparent;
+      color: $active-regular;
+      &:hover {
+         color: $accent;
+         transition: color .3s ease;
+      }
+      &_active {
+         color: $accent;
+         border-bottom: 2px solid $accent;
       }
    }
 }
@@ -133,9 +179,13 @@
       &__list {
          display: block;
       }
-      &__link {
+      &__link,
+      &__link_a{
          display: block;
          padding: 10px;
+      }
+      &_light {
+         background-color: $grey-bg-alt;
       }
    }
    .header__nav.open {
@@ -151,9 +201,9 @@
 .btn-lang {
    padding: toRem(5) toRem(7);
    border-radius: toRem(8);
-   color: $basic-white;
+   color: $grey-text;
    &:checked {
-      color: $basic-white;
+      color: $grey-text;
    }
 }
 .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
@@ -195,5 +245,34 @@
       background-color: $accent;
       border-radius: 50%;
       transition: transform .2s ease;
+   }
+}
+
+.slash {
+   display: flex;
+   gap: 4px;
+   align-items: start;
+   &__img {
+      width: toRem(21);
+      height: toRem(47);
+   }
+   &__txt {
+      color: $main-regular;
+      font-family: Montserrat;
+      font-size: toRem($fs-38);
+   }
+}
+
+@media (max-width: 500px) {
+   .slash {
+      &__img {
+         width: toRem(12);
+         height: toRem(26);
+      }
+      &__txt {
+         color: $main-regular;
+         font-family: Montserrat;
+         font-size: toRem(20);
+      }
    }
 }
