--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 @import "./footer";
 @import "./news";
 @import "./table";
+@import "./about-us";
 @import "./frame";
 @import "./carousel";
 @import "./header";
@@ -80,6 +81,7 @@
       padding: 0 0 30px 0;  
    }
    // &__header {
+   //    padding: toRem(50) 0 0 0;
    // }
    // &__title { 
    // }
@@ -99,4 +101,18 @@
 .thrid-section {
    padding: toRem(30) 0 toRem(30) 0;
    background-color: $grey-bg;
+}
+
+.section__about-us {
+   // background-color: $basic-white;
+   padding: toRem(50) 0;
+   @media (max-width: 500px) {
+      padding: 0 0 toRem(50) 0;
+   }
+}
+.section__main {
+   padding: toRem(60) 0 0 0;
+   display: flex;
+   flex-direction: column;
+   gap: toRem(60);
 }
